--- a/app/project/frontend/templates/feed.html
+++ b/app/project/frontend/templates/feed.html
@@ -1,178 +1,104 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SixLove | Feed</title>
-    {% load static %}
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body id="feed">
-    <!-- ---------------------------- Header ----------------------------  -->
-    <header>
-      <span
-        ><img
-          src="{% static 'images/SixLoveLogo.svg' %}"
-          alt="SixLove Logo"
-          width="30px;"
-      /></span>
-      <span id="title">SixLove</span>
-      <a href="{% url 'login' %}">login</a>
-    </header>
-    <!-- --------------X------------- Header --------------X-------------  -->
-    <!-- ---------------------------- Nav Menu ----------------------------  -->
-    <nav>
-      <a href="{% url 'tennis' %}"
-        ><img
-          src="{% static 'images/tennis-page-icon.svg' %}"
-          alt="Tennis Page Icon"
-        /><span>Tennis</span></a
-      >
-      <a class="current" href="{% url 'feed' %}"
-        ><img
-          src="{% static 'images/feed-page-icon.svg' %}"
-          alt="Feed Page Icon"
-        /><span>Feed</span></a
-      >
-      <a href="{% url 'learn' %}"
-        ><img
-          src="{% static 'images/learn-page-icon.svg' %}"
-          alt="Learn Page Icon"
-        /><span>Learn</span></a
-      >
-      <a href="{% url 'history' %}"
-        ><img
-          src="{% static 'images/history-page-icon.svg' %}"
-          alt="History Page Icon"
-        /><span>History</span></a
-      >
-      <a href="{% url 'profile' %}"
-        ><img
-          src="{% static 'images/profile-page-icon.svg' %}"
-          alt="Profile Page Icon"
-        /><span>Profile</span></a
-      >
-    </nav>
-    <!-- --------------X------------- Nav Menu --------------X-------------  -->
-    <main>
-      <div style="display: none">
-        <h1>Feed</h1>
+{% extends 'base.html' %} 
+{% block title %}Feed{% endblock %} 
+{% block content %}
+{% load static %}
+<div style="display: none">
+  <h1>Feed</h1>
+</div>
+<section class="feed-posts full-width navbar-adjust-feed">
+  <div class="row-adjust row mb-5 justify-content-center">
+    <div class="feed-post col-10 col-md-6">
+      <div class="card">
+        <img
+          src="{% static 'images/placeholder.png' %}"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <div class="post-interaction-btns">
+            <button class="btn fs-2">
+              <i class="fa-regular fa-heart text-danger"></i>
+              <!-- <i class="fa-solid fa-heart text-danger"></i> -->
+            </button>
+            <button class="btn fs-2">
+              <i class="fa-regular fa-comment"></i>
+            </button>
+          </div>
+          <p>124 likes</p>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up
+            the bulk of the card's content.
+          </p>
+        </div>
       </div>
-      <section class="feed-posts full-width navbar-adjust-feed">
-        <div class="row-adjust row mb-5 justify-content-center">
-          <div class="feed-post col-10 col-md-6">
-            <div class="card">
-              <img
-                src="{% static 'images/placeholder.png' %}"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="post-interaction-btns">
-                  <button class="btn fs-2">
-                    <i class="fa-regular fa-heart text-danger"></i>
-                    <!-- <i class="fa-solid fa-heart text-danger"></i> -->
-                  </button>
-                  <button class="btn fs-2">
-                    <i class="fa-regular fa-comment"></i>
-                  </button>
-                </div>
-                <p>124 likes</p>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-              </div>
-            </div>
-            <div class="post-info">
-              <p>View all 12 comments</p>
-              <p>2 days ago</p>
-            </div>
+      <div class="post-info">
+        <p>View all 12 comments</p>
+        <p>2 days ago</p>
+      </div>
+    </div>
+  </div>
+  <div class="row-adjust row mb-5 justify-content-center">
+    <div class="feed-post col-10 col-md-6">
+      <div class="card">
+        <img
+          src="{% static 'images/placeholder.png' %}"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <div class="post-interaction-btns">
+            <button class="btn fs-2">
+              <i class="fa-regular fa-heart text-danger"></i>
+              <!-- <i class="fa-solid fa-heart text-danger"></i> -->
+            </button>
+            <button class="btn fs-2">
+              <i class="fa-regular fa-comment"></i>
+            </button>
           </div>
+          <p>124 likes</p>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up
+            the bulk of the card's content.
+          </p>
         </div>
-        <div class="row-adjust row mb-5 justify-content-center">
-          <div class="feed-post col-10 col-md-6">
-            <div class="card">
-              <img
-                src="{% static 'images/placeholder.png' %}"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="post-interaction-btns">
-                  <button class="btn fs-2">
-                    <i class="fa-regular fa-heart text-danger"></i>
-                    <!-- <i class="fa-solid fa-heart text-danger"></i> -->
-                  </button>
-                  <button class="btn fs-2">
-                    <i class="fa-regular fa-comment"></i>
-                  </button>
-                </div>
-                <p>124 likes</p>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-              </div>
-            </div>
-            <div class="post-info">
-              <p>View all 12 comments</p>
-              <p>2 days ago</p>
-            </div>
+      </div>
+      <div class="post-info">
+        <p>View all 12 comments</p>
+        <p>2 days ago</p>
+      </div>
+    </div>
+  </div>
+  <div class="row-adjust row mb-5 justify-content-center">
+    <div class="feed-post col-10 col-md-6">
+      <div class="card">
+        <img
+          src="{% static 'images/placeholder.png' %}"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <div class="post-interaction-btns">
+            <button class="btn fs-2">
+              <i class="fa-regular fa-heart text-danger"></i>
+              <!-- <i class="fa-solid fa-heart text-danger"></i> -->
+            </button>
+            <button class="btn fs-2">
+              <i class="fa-regular fa-comment"></i>
+            </button>
           </div>
+          <p>124 likes</p>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up
+            the bulk of the card's content.
+          </p>
         </div>
-        <div class="row-adjust row mb-5 justify-content-center">
-          <div class="feed-post col-10 col-md-6">
-            <div class="card">
-              <img
-                src="{% static 'images/placeholder.png' %}"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="post-interaction-btns">
-                  <button class="btn fs-2">
-                    <i class="fa-regular fa-heart text-danger"></i>
-                    <!-- <i class="fa-solid fa-heart text-danger"></i> -->
-                  </button>
-                  <button class="btn fs-2">
-                    <i class="fa-regular fa-comment"></i>
-                  </button>
-                </div>
-                <p>124 likes</p>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-              </div>
-            </div>
-            <div class="post-info">
-              <p>View all 12 comments</p>
-              <p>2 days ago</p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-  </body>
-</html>
+      </div>
+      <div class="post-info">
+        <p>View all 12 comments</p>
+        <p>2 days ago</p>
+      </div>
+    </div>
+  </div>
+</section>
+{% endblock %}
+{% block active_feed %}current{% endblock %}
