--- a/app/project/frontend/templates/tennis.html
+++ b/app/project/frontend/templates/tennis.html
@@ -1,371 +1,288 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SixLove | Tennis</title>
-    {% load static %}
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-    <!-- <script src="{% static 'scripts/tennis.js' %}" defer></script> -->
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body id="tennis">
-    <!-- ---------------------------- Header ----------------------------  -->
-    <header>
-      <span
-        ><img
-          src="{% static 'images/SixLoveLogo.svg' %}"
-          alt="SixLove Logo"
-          width="30px;"
-      /></span>
-      <span id="title">SixLove</span>
-      <a href="{% url 'login' %}">login</a>
-    </header>
-    <!-- --------------X------------- Header --------------X-------------  -->
-    <!-- ---------------------------- Nav Menu ----------------------------  -->
-    <nav>
-      <a class="current" href="{% url 'tennis' %}"
-        ><img
-          src="{% static 'images/tennis-page-icon.svg' %}"
-          alt="Tennis Page Icon"
-        /><span>Tennis</span></a
+{% extends 'base.html' %} 
+{% block title %}Tennis{% endblock %} 
+{% block content %}
+<h1 class="heading">Program</h1>
+<!-- ---------------------------- Today's Sessions ----------------------------  -->
+<div class="today">
+  <p class="heading">Today</p>
+  <p class="tennis-session-msg">No tennis sessions scheduled for today.</p>
+  <div class="hide-div tennis-session">
+    <p class="s-title">Tennis Session</p>
+    <p class="s-notes">Notes...</p>
+    <p class="s-date">DD-MM-YYYY</p>
+  </div>
+  <div class="add-session-today-btn">
+    <button data-bs-toggle="modal" data-bs-target="#addSessionModal">
+      <i class="fa-solid fa-plus"></i>
+    </button>
+  </div>
+</div>
+<!-- --------------X------------- Today's Sessions --------------X-------------  -->
+<!-- ---------------------------- Planner ----------------------------  -->
+<div class="planner">
+  <p class="heading">Planner</p>
+  <input id="session-date-picker" type="date" name="" id="" />
+  <div class="center-calendar">
+    <div class="dynamic-calendar">
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
       >
-      <a href="{% url 'feed' %}"
-        ><img
-          src="{% static 'images/feed-page-icon.svg' %}"
-          alt="Feed Page Icon"
-        /><span>Feed</span></a
+        1
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
       >
-      <a href="{% url 'learn' %}"
-        ><img
-          src="{% static 'images/learn-page-icon.svg' %}"
-          alt="Learn Page Icon"
-        /><span>Learn</span></a
+        2
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
       >
-      <a href="{% url 'history' %}"
-        ><img
-          src="{% static 'images/history-page-icon.svg' %}"
-          alt="History Page Icon"
-        /><span>History</span></a
+        3
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
       >
-      <a href="{% url 'profile' %}"
-        ><img
-          src="{% static 'images/profile-page-icon.svg' %}"
-          alt="Profile Page Icon"
-        /><span>Profile</span></a
+        4
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
       >
-    </nav>
-    <!-- ---------------------------- Main ----------------------------  -->
-    <main>
-      <h1 class="heading">Program</h1>
-      <!-- ---------------------------- Today's Sessions ----------------------------  -->
-      <div class="today">
-        <p class="heading">Today</p>
-        <p class="tennis-session-msg">
-          No tennis sessions scheduled for today.
-        </p>
-        <div class="hide-div tennis-session">
-          <p class="s-title">Tennis Session</p>
-          <p class="s-notes">Notes...</p>
-          <p class="s-date">DD-MM-YYYY</p>
-        </div>
-        <div class="add-session-today-btn">
-          <button data-bs-toggle="modal" data-bs-target="#addSessionModal">
-            <i class="fa-solid fa-plus"></i>
-          </button>
-        </div>
+        5
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        6
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        7
+      </button>
+      <button
+        class="day current"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        8
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        9
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        10
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        11
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        12
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        13
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        14
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        15
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        16
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        17
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        18
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        19
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        20
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        21
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        22
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        23
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        24
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        25
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        26
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        27
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        28
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        29
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        30
+      </button>
+      <button
+        class="day"
+        data-bs-toggle="modal"
+        data-bs-target="#addSessionModal"
+      >
+        31
+      </button>
+    </div>
+  </div>
+  <div class="btn-div">
+    <button class="btn-add-session">Add Session</button>
+  </div>
+</div>
+<!-- --------------X------------- Planner --------------X-------------  -->
+<!-- ---------------------------- Modal ----------------------------  -->
+<div class="hide-div modal" tabindex="-1" id="addSessionModal">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Add Tennis Session</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
       </div>
-      <!-- --------------X------------- Today's Sessions --------------X-------------  -->
-      <!-- ---------------------------- Planner ----------------------------  -->
-      <div class="planner">
-        <p class="heading">Planner</p>
-        <input id="session-date-picker" type="date" name="" id="" />
-        <div class="center-calendar">
-          <div class="dynamic-calendar">
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              1
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              2
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              3
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              4
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              5
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              6
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              7
-            </button>
-            <button
-              class="day current"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              8
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              9
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              10
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              11
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              12
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              13
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              14
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              15
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              16
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              17
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              18
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              19
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              20
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              21
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              22
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              23
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              24
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              25
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              26
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              27
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              28
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              29
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              30
-            </button>
-            <button
-              class="day"
-              data-bs-toggle="modal"
-              data-bs-target="#addSessionModal"
-            >
-              31
-            </button>
-          </div>
-        </div>
-        <div class="btn-div">
-          <button class="btn-add-session">Add Session</button>
-        </div>
-      </div>
-      <!-- --------------X------------- Planner --------------X-------------  -->
-      <!-- ---------------------------- Modal ----------------------------  -->
-      <div class="hide-div modal" tabindex="-1" id="addSessionModal">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Add Tennis Session</h5>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <input id="modal-title" type="text" placeholder="Title" />
-              <textarea name="" id="modal-notes" cols="32" rows="5">
+      <div class="modal-body">
+        <input id="modal-title" type="text" placeholder="Title" />
+        <textarea name="" id="modal-notes" cols="32" rows="5">
 Notes here...</textarea
-              >
-              <p class="modal-date small" style="padding-left: 4px"></p>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-              <button
-                id="add-session-modal-btn"
-                type="button"
-                class="btn-add-session btn"
-              >
-                Add Session
-              </button>
-            </div>
-          </div>
-        </div>
+        >
+        <p class="modal-date small" style="padding-left: 4px"></p>
       </div>
-      <!-- --------------X------------- Modal --------------X-------------  -->
-    </main>
-    <!-- --------------X------------- Main --------------X-------------  -->
-  </body>
-</html>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Close
+        </button>
+        <button
+          id="add-session-modal-btn"
+          type="button"
+          class="btn-add-session btn"
+        >
+          Add Session
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- --------------X------------- Modal --------------X-------------  -->
+{% endblock %}
+{% block active_tennis %}current{% endblock %}
