--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -27,6 +27,10 @@
         background-color: #207025;
       }
 
+      .tennis-btn {
+        margin-left: 0;
+      }
+
       a {
         color: #000000;
       }
