--- a/app/project/tennis/templates/tennis/tennis.html
+++ b/app/project/tennis/templates/tennis/tennis.html
@@ -4,45 +4,56 @@
   <p>This is the tennis page for SixLove, you can view your tennis sessions here!</p>
 
   <h3 style="margin-top: 48px;">Today</h3>
-  <!-- <p>{{ is_today }}</p> -->
 
-  <!-- {% for session in today_sessions %} -->
+  {% if today_sessions %}
+  {% for session in today_sessions %}
   <div class="session">
-    <!-- <p><span>Title: </span>{{ session.title }}</p> -->
-    <!-- <p><span>Notes: </span>{{ session.notes }}</p> -->
-    <!-- <p><span>Date: </span>{{ session.date }}</p> -->
-    <!-- <p><span>is completed: </span>{{ session.is_completed }}</p> -->
-    <!-- <a href="{{ session.id }}/edit"><button>Edit Session</button></a> -->
-    <!-- <a href="{{ session.id }}/delete"><button>Delete Session</button></a> -->
+    <p><span>Title: </span>{{ session.title }}</p>
+    <p><span>Notes: </span>{{ session.notes }}</p>
+    <p><span>Date: </span>{{ session.date }}</p>
+    <p><span>is completed: </span>{{ session.is_completed }}</p>
+    <a href="{{ session.id }}/edit"><button>Edit Session</button></a>
+    <a href="{{ session.id }}/delete"><button>Delete Session</button></a>
   </div>
-  <!-- {% endfor %} -->
+  {% endfor %}
+  {% else %}
+  <p>{{ is_today }}</p>
+  {% endif %}
 
   <a href="{% url 'tennis:add' %}">
-    <button class="add-btn" style="margin-top: 20px;">Add Tennis Session</button>
+    <button class="tennis-btn" style="margin-top: 20px;">Add Tennis Session</button>
   </a>
 
   <h3 style="margin-top: 48px;">Upcoming sessions</h3>
-  <!-- {% for session in upcoming_sessions %} -->
+  {% if upcoming_sessions %}
+  {% for session in upcoming_sessions %}
   <div class="session">
-    <!-- <p><span>Title: </span>{{ session.title }}</p> -->
-    <!-- <p><span>Notes: </span>{{ session.notes }}</p> -->
-    <!-- <p><span>Date: </span>{{ session.date }}</p> -->
-    <!-- <p><span>is completed: </span>{{ session.is_completed }}</p> -->
-    <!-- <a href="{{ session.id }}/edit"><button>Edit Session</button></a> -->
-    <!-- <a href="{{ session.id }}/delete"><button>Delete Session</button></a> -->
+    <p><span>Title: </span>{{ session.title }}</p>
+    <p><span>Notes: </span>{{ session.notes }}</p>
+    <p><span>Date: </span>{{ session.date }}</p>
+    <p><span>is completed: </span>{{ session.is_completed }}</p>
+    <a href="{{ session.id }}/edit"><button>Edit Session</button></a>
+    <a href="{{ session.id }}/delete"><button>Delete Session</button></a>
   </div>
-  <!-- {% endfor %} -->
+  {% endfor %}
+  {% else %}
+  <p>No upcoming tennis sessions.</p>
+  {% endif %}
 
   <h3 style="margin-top: 48px;">History</h3>
-  <!-- {% for session in past_sessions %} -->
-  <!-- <div class="session"> -->
-    <!-- <p><span>Title: </span>{{ session.title }}</p> -->
-    <!-- <p><span>Notes: </span>{{ session.notes }}</p> -->
-    <!-- <p><span>Date: </span>{{ session.date }}</p> -->
-    <!-- <p><span>is completed: </span>{{ session.is_completed }}</p> -->
+  {% if past_sessions %}
+  {% for session in past_sessions %}
+  <div class="session">
+    <p><span>Title: </span>{{ session.title }}</p>
+    <p><span>Notes: </span>{{ session.notes }}</p>
+    <p><span>Date: </span>{{ session.date }}</p>
+    <p><span>is completed: </span>{{ session.is_completed }}</p>
     <!-- <a href="{{ session.id }}/edit"><button>Edit Session</button></a> -->
-  <!-- </div> -->
-  <!-- {% endfor %} -->
+  </div>
+  {% endfor %}
+  {% else %}
+  <p>No past tennis sessions.</p>
+  {% endif %}
 
 </main>
 {% endblock %}
