--- a/app/project/tennis/templates/tennis/delete_tennis_session.html
+++ b/app/project/tennis/templates/tennis/delete_tennis_session.html
@@ -5,7 +5,7 @@
 
   <form action="" method="post">
     {% csrf_token %}
-    <button type="submit">Delete Tennis Session</button>
+    <button class="btn" type="submit">Delete Tennis Session</button>
   </form>
 
   <a href="{% url 'tennis:tennis' %}"
