--- a/app/project/tennis/templates/tennis/edit_tennis_session.html
+++ b/app/project/tennis/templates/tennis/edit_tennis_session.html
@@ -6,7 +6,7 @@
   <form action="" method="post" novalidate>
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Edit Tennis Session">
+    <input class="btn" type="submit" value="Edit Tennis Session">
   </form>
 
   <a href="{% url 'tennis:tennis' %}"
