--- a/app/project/tennis/templates/tennis/tennis.html
+++ b/app/project/tennis/templates/tennis/tennis.html
@@ -1,4 +1,27 @@
-{% extends '../registration/base.html' %} {% block content %}
+{% extends '../registration/base.html' %} 
+{% block extra_styles %}
+<style>
+  .session {
+        border: 1px solid #00000000;
+        box-shadow: 4px 4px 20px #00000030;
+        border-radius: 8px;
+        margin-bottom: 16px;
+  }
+
+  .session:hover {
+        box-shadow: 4px 4px 20px #00000050;
+  }
+
+  .session span {
+        font-weight: bold;
+  }
+
+  .session p, .session a {
+        padding-left: 20px;
+  }
+</style>
+{% endblock %}
+{% block content %}
 <main style="padding: 16px">
   <h2>Tennis</h2>
   <p>This is the tennis page for SixLove, you can view your tennis sessions here!</p>
@@ -48,7 +71,7 @@
     <p><span>Notes: </span>{{ session.notes }}</p>
     <p><span>Date: </span>{{ session.date }}</p>
     <p><span>is completed: </span>{{ session.is_completed }}</p>
-    <!-- <a href="{{ session.id }}/edit"><button>Edit Session</button></a> -->
+    <a href="{{ session.id }}/edit"><button>Edit Session</button></a>
   </div>
   {% endfor %}
   {% else %}
